# applied-ai-engineering-samples

./: .gitignore  config.ini  logging.yaml  opendataqna.py  pyproject.toml
agents/: BuildSQLAgent.py  DebugSQLAgent.py  DescriptionAgent.py  EmbedderAgent.py  ResponseAgent.py  ValidateSQLAgent.py  VisualizeAgent.py  core.py
backend-apis/: main.py
docs/: best_practices.md  config_guide.md
embeddings/: retrieve_embeddings.py  store_embeddings.py
notebooks/: (old)Run_OpenDataQnA.ipynb  (standalone)Run_OpenDataQnA.ipynb  0_Setup_Environment.ipynb  1_Setup_OpenDataQnA.ipynb  2_Run_OpenDataQnA.ipynb  Breedr-Run-OpenDataQnA.ipynb  Breedr-Setup-OpenDataQnA.ipynb
scripts/: save_config.py
utilities/: __init__.py
