[tool.poetry]
name = "talktodata"
version = "0.1.0"
description = ""
authors = ["msubasioglu","l-sri","orpzs"]
license = "Apache 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = ">3.10 <4.0"
google = "^3.0.0"
google-api-python-client = "^2.120.0"
google-cloud = "^0.34.0"
google-cloud-aiplatform = "^1.43.0"
pandas = "^2.2.1"
pandas-gbq = "^0.23.1"
cloud-sql-python-connector = {extras = ["asyncpg"], version = "^1.7.0"}
sqlalchemy = "^2.0.27"
pgvector = "^0.2.5"
pg8000 = "^1.30.5"
tabulate = "^0.9.0"
langchain = "^0.2.5"
fsspec = "^2024.2.0"
gcsfs = "^2024.2.0"
streamlit = "^1.32.2"
google-cloud-bigquery = {extras = ["opentelemetry"], version = "^3.25.0"}
google-cloud-bigquery-connection = "^1.15.3"
pyarrow = "^16.1.0"
Flask = { version = "^2.1.0", extras = ["async"]}
gunicorn = "^20.1.0"
flask-cors = "^4.0.0"
Werkzeug = "^2.3.7"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
langchain-community = "^0.2.5"
opentelemetry-exporter-gcp-trace = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pyzmq ="<26.0.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"